--- a/.github/workflows/build-and-publish-image.yml
+++ b/.github/workflows/build-and-publish-image.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: 'ghcr.io'
-  IMAGE_NAME: '${{ github.repository }}'
+  IMAGE_NAME: '${{ github.repository_owner }}/qwen-code'
 
 jobs:
   build-and-push-to-ghcr:
@@ -21,6 +21,7 @@ jobs:
     permissions:
       contents: 'read'
       packages: 'write'
+      id-token: 'write'
 
     steps:
       - name: 'Checkout repository'
@@ -46,7 +47,7 @@ jobs:
 
       - name: 'Log in to the Container registry'
         if: |-
-          ${{ github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) }}
+          ${{ github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') || github.event.inputs.publish == 'true') }}
         uses: 'docker/login-action@v3' # ratchet:exclude
         with:
           registry: '${{ env.REGISTRY }}'
