fix: update workflows

--- a/.github/workflows/build-and-publish-image.yml
+++ b/.github/workflows/build-and-publish-image.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: 'ghcr.io'
-  IMAGE_NAME: '${{ github.repository_owner }}/qwen-code'
+  IMAGE_NAME: '${{ github.repository }}'
 
 jobs:
   build-and-push-to-ghcr:
@@ -21,7 +21,6 @@ jobs:
     permissions:
       contents: 'read'
       packages: 'write'
-      id-token: 'write'
 
     steps:
       - name: 'Checkout repository'
