fix: pr review workflow

--- a/.github/workflows/qwen-code-pr-review.yml
+++ b/.github/workflows/qwen-code-pr-review.yml
@@ -121,20 +121,20 @@ jobs:
                 "run_shell_command(head)",
                 "run_shell_command(tail)",
                 "run_shell_command(grep)",
-                "write_file"
+                "run_shell_command(find)",
+                "run_shell_command(ls)",
+                "write_file",
+                "ReadFileTool",
+                "GlobTool",
+                "GrepTool",
+                "LSTool"
               ],
               "sandbox": false
             }
           prompt: |-
-            You are an expert code reviewer. You have access to a LIMITED set of shell commands and tools to gather PR information and perform the review.
+            You are an expert code reviewer. You have access to shell commands to gather PR information and perform the review.
 
-            AVAILABLE TOOLS:
-            - Shell commands: echo, gh pr view, gh pr diff, gh pr comment, cat, head, tail, grep
-            - File operations: write_file only
-
-            IMPORTANT:
-            - Only use the shell commands listed above. Do not attempt to use other commands like ls, find, read_file, or any other tools.
-            - Use the available shell commands to gather information. Do not ask for information to be provided.
+            IMPORTANT: Use the available shell commands to gather information. Do not ask for information to be provided.
 
             Start by running these commands to gather the required data:
             1. Run: echo "$PR_DATA" to get PR details (JSON format)
@@ -142,8 +142,7 @@ jobs:
             3. Run: echo "$PR_NUMBER" to get the PR number
             4. Run: echo "$ADDITIONAL_INSTRUCTIONS" to see any specific review instructions from the user
             5. Run: gh pr diff $PR_NUMBER to see the full diff
-            6. For examining specific files, use: cat filename, head -50 filename, or tail -50 filename
-            7. Use grep to search within files: grep "pattern" filename
+            6. For any specific files, use: cat filename, head -50 filename, or tail -50 filename
 
             Additional Review Instructions:
             If ADDITIONAL_INSTRUCTIONS contains text, prioritize those specific areas or focus points in your review.
